# djprep

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
docs/: architecture.md
src/: error.rs  lib.rs  main.rs  types.rs
src/analysis/: metadata.rs  mod.rs  stratum.rs  traits.rs
src/analysis/bpm/: mod.rs
src/analysis/key/: camelot.rs  mod.rs
src/analysis/stems/: chunking.rs  mod.rs  model.rs  separator.rs  stft.rs
src/audio/: decoder.rs  mod.rs
src/config/: cli.rs  mod.rs  settings.rs
src/discovery/: mod.rs  scanner.rs
src/export/: json.rs  mod.rs
src/export/rekordbox/: mod.rs  schema.rs  uri.rs  xml.rs
src/pipeline/: mod.rs  orchestrator.rs
tests/: integration_tests.rs
